--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 
 <body>
-  <section class="container">
-    <h1>My Timer</h1>
-    <p class="clock">00:00:00</p>
-    <p>
-      <button class="start">Start</button>
-      <button class="pause">Pause</button>
-      <button class="restart">Restart</button>
-    </p>
-  </section>
+  <main class="main">
+    <section class="container">
+      <h1>My Timer</h1>
+      <p class="clock">00:00:00:00</p>
+      <p>
+        <button class="start">Start</button>
+        <button class="pause">Pause</button>
+        <button class="restart">Restart</button>
+      </p>
+    </section>
+  </main>
 
   <script src="./assets/js/main.js"></script>
 </body>
